<resources>
    <string name="app_name">WeatherApp</string>
    <string name="api_key">ebbc66b823072502c81339f5b0b9b042</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="upArrow">↑</string>
    <string name="downArrow">↓</string>
    <string name="quote">Enjoy the clouds, awaits for splashes</string>
    <string name="favourite">Favourite</string>
    <string name="forecast">Forecast</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="cloudy">cloudy</string>
    <string name="_23c">23C</string>
    <string name="weather_image">weather image</string>
    <string name="add_as_favourite"> <u>Add as favourite</u></string>
    <string name="click_to_search">Click to search</string>
    <string name="enter_city_name_and_click_to_search">Enter city name and click to search</string>

</resources>
