<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <RelativeLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/searchCityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/searchImageView"
            android:layout_toStartOf="@+id/searchImageView"
            android:gravity="start|center"
            android:hint="@string/enter_city_name_and_click_to_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="18sp"
            tools:text="@string/hyderabad" />

        <ImageView
            android:id="@+id/searchImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/click_to_search"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:src="@android:drawable/ic_menu_search" />

    </RelativeLayout>

    <ListView
        android:id="@+id/searchResultsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchLayout"
        android:layout_marginTop="5dp" />

</RelativeLayout>
